# webview2-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: rust.yml
.windows/winmd/: Microsoft.Web.WebView2.Win32.winmd
callback-macros/src/: lib.rs
crates/bindings/: CHANGELOG.md  Cargo.toml  README.md  build.rs
crates/bindings/.windows/arm64/: WebView2LoaderStatic.lib
crates/bindings/.windows/winmd/: Microsoft.Web.WebView2.Win32.winmd
crates/bindings/.windows/x64/: WebView2LoaderStatic.lib
crates/bindings/.windows/x86/: WebView2LoaderStatic.lib
crates/bindings/arm64/: WebView2LoaderStatic.lib
crates/bindings/src/: Microsoft.rs  bindings.rs  browser_version.rs  callback_interfaces.rs  declared_interfaces.rs  lib.rs
crates/bindings/src/Microsoft/: mod.rs
crates/bindings/src/Microsoft/Web/: mod.rs
crates/bindings/src/Microsoft/Web/WebView2/: mod.rs
crates/bindings/src/Microsoft/Web/WebView2/Win32/: mod.rs
crates/bindings/winmd/: Microsoft.Web.WebView2.Win32.winmd
crates/bindings/x64/: WebView2LoaderStatic.lib
crates/bindings/x86/: WebView2LoaderStatic.lib
crates/callback-macros/: CHANGELOG.md  Cargo.toml  README.md
crates/callback-macros/src/: lib.rs
crates/update-bindings/: Cargo.toml  README.md  build.rs
crates/update-bindings/src/: main.rs  safe_bindgen.rs  webview2_bindgen.rs  webview2_nuget.rs  webview2_path.rs
crates/update-bindings/winmd/: Microsoft.Web.WebView2.Win32.winmd
crates/webview2-com/: CHANGELOG.md  Cargo.toml  README.md  build.rs
crates/webview2-com/.windows/winmd/: Microsoft.Web.WebView2.Win32.winmd
crates/webview2-com/examples/: sample.rs
crates/webview2-com/src/: callback.rs  lib.rs  options.rs  pwstr.rs  webview2.rs
examples/: sample.rs
src/: browser_version.rs  callback.rs  lib.rs  options.rs  pwstr.rs  webview2.rs
