[workspace]
members = [ "crates/*" ]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.82"
repository = "https://github.com/wravery/webview2-rs"
license = "MIT"
keywords = [ "win32", "webview2" ]
categories = [ "os::windows-apis" ]
version = "0.38.2"

[workspace.dependencies]
webview2-com-sys = { version = "0.38.2", path = "crates/bindings/" }
webview2-com-macros = { version = "0.8.1", path = "crates/callback-macros/" }

proc-macro2 = "1"
quote = "1"
regex = "1"
syn = { version = "2.0", features = ["full"] }
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1"
thiserror = "2"
windows-bindgen = "0.62"
windows-core = "0.62"

[workspace.dependencies.windows]
version = "0.62"
features = [
    "Win32_Foundation",
    "Win32_Globalization",
    "Win32_System_Com",
    "Win32_System_Ole",
    "Win32_System_Variant",
    "Win32_System_WinRT",
    "Win32_UI_WindowsAndMessaging",
]
