[package]
name = "webview2-com-sys"
version = "0.30.0"
edition = "2021"
rust-version = "1.61"
description = "Bindings generated with the windows crate for the WebView2 COM APIs"
repository = "https://github.com/wravery/webview2-rs"
license = "MIT"
keywords = [ "win32", "webview2" ]
categories = [ "os::windows-apis" ]

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = [
    "i686-pc-windows-msvc",
    "aarch64-pc-windows-msvc",
    "x86_64-pc-windows-gnu",
    "i686-pc-windows-gnu",
]

[dependencies]
windows-core = "0.56"

[dependencies.windows]
version = "0.56"
features = [
    "implement",
    "Win32_Foundation",
    "Win32_Globalization",
    "Win32_System_Com",
    "Win32_System_Ole",
    "Win32_System_Variant",
    "Win32_System_WinRT",
    "Win32_UI_WindowsAndMessaging",
]

[build-dependencies]
thiserror = "1.0.26"
