[package]
name = "webview2-com-sys"
version = "0.35.0"
description = "Bindings generated with the windows crate for the WebView2 COM APIs"

edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = [
    "i686-pc-windows-msvc",
    "aarch64-pc-windows-msvc",
    "x86_64-pc-windows-gnu",
    "i686-pc-windows-gnu",
]

[dependencies]
windows-core.workspace = true
windows-targets.workspace = true

[dependencies.windows]
workspace = true
features = [
    "Win32_Foundation",
    "Win32_Globalization",
    "Win32_System_Com",
    "Win32_System_Ole",
    "Win32_System_Variant",
    "Win32_System_WinRT",
    "Win32_UI_WindowsAndMessaging",
]

[build-dependencies]
thiserror.workspace = true
