[package]
name = "webview2-com-macros"
version = "0.3.0"
edition = "2018"
description = "Macros which generate callback implementations for WebView2 COM APIs"
repository = "https://github.com/wravery/webview2-rs"
license = "MIT"
keywords = [ "win32", "webview2" ]
categories = [ "os::windows-apis" ]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.26"
quote = "1.0.9"
syn = { version = "1.0.67", features = ["full"] }
