[package]
name = "webview2-com-macros"
version = "0.8.0"
edition = "2021"
description = "Macros which generate callback implementations for WebView2 COM APIs"
repository = "https://github.com/wravery/webview2-rs"
license = "MIT"
keywords = [ "win32", "webview2" ]
categories = [ "os::windows-apis" ]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
