[package]
name = "webview2-com-macros"
version = "0.8.1"
description = "Macros which generate callback implementations for WebView2 COM APIs"

edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true
