[package]
name = "webview2-com"
version = "0.29.0"
edition = "2021"
rust-version = "1.61"
description = "Rust bindings for the WebView2 COM APIs"
repository = "https://github.com/wravery/webview2-rs"
license = "MIT"
keywords = [ "win32", "webview2" ]
categories = [ "os::windows-apis" ]

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = [
    "i686-pc-windows-msvc",
    "aarch64-pc-windows-msvc",
    "x86_64-pc-windows-gnu",
    "i686-pc-windows-gnu",
]

[dependencies]
webview2-com-sys = "0.29.0"
webview2-com-macros = "0.7.0"
windows-core = "0.56"
windows-implement = "0.56"
windows-interface = "0.56"

[dependencies.windows]
version = "0.56"
features = [ "implement" ]

[dev-dependencies]
regex = "1.5.4"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"

[dev-dependencies.windows]
version = "0.56"
features = [
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_UI_HiDpi",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
]
